--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ font-family: 'Source Code Pro', monospace;
 
 */
 
-.logo-word-one{
+.logo-word-one,.content-heading-wrapper{
     font-family: 'Oswald', sans-serif;
 }
 .logo-word-two{
@@ -17,4 +17,85 @@ font-family: 'Source Code Pro', monospace;
 .navigation-wrapper{
     font-family: 'Caveat', cursive;
  
+}
+/*
+.dark-button{
+    position: relative;
+
+    height: 28px;
+    width: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    &::after{
+        content: "";
+        width: 100%;
+        height:100%;
+        background-color: rgb(14, 13, 73);
+        position: absolute;
+        inset: 0;
+        border-radius: 50%;
+        z-index: -1;
+      
+    }
+}
+
+.light-button{
+    position: relative;
+
+    height: 28px;
+    width: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    &::after{
+        content: "";
+        width: 100%;
+        height:100%;
+        background-color: rgb(151, 151, 151);
+        position: absolute;
+        inset: 0;
+        border-radius: 50%;
+        z-index: -1;
+      
+    }
+}*/
+
+.content-btn-wrapper {
+    
+   color:white !important;
+    .plane-wrapper{
+      transform: scale(2)rotate(50deg);
+      right: -20px;
+      top:20px;
+      z-index: -1;
+      animation:plane-ani 1s ease-in 1;
+      animation-fill-mode:forwards;
+     
+      @keyframes plane-ani {
+        1%{
+            transform: scale(2)rotate(30deg);
+            right: -30px;
+            top:30px;  
+        }
+        5%{
+            transform: scale(2.5)rotate(40deg);
+            right: -50px;
+            top:50px;  
+        }
+        10%{
+            transform: scale(2.2)rotate(40deg);
+            right: -80px;
+            top:60px;  
+        }
+        100%{
+            transform: scale(2.2)rotate(10deg);
+            right: -580px;
+            top:-10px;  
+        }
+      }
+    }
+  
 }
